--- a/news/2025-01-02.md
+++ b/news/2025-01-02.md
@@ -1,4 +1,5 @@
 ---
+type: news
 name: "Tiny" dog rescued off remote peak
 ---
 Around 9 a.m. on January 2, 2025, Mesa County Search and Rescue (MCSAR) received a call to rescue a trapped tracking dog near Collbran, CO. The owners of the dog, named Tiny, advised MCSAR that Tiny had been tracking a mountain lion when she became stranded in the middle of a cliff face near the mountain’s summit 24 hours prior. Thanks to a GPS tracker on Tiny’s collar, the owners knew her approximate location, though realized it wasn’t somewhere they could safely reach her.
